style: Adjust advanced pie margin to prevent overflow

--- a/client/src/app/pages/poam-processing/poam-manage/poam-manage.component.scss
+++ b/client/src/app/pages/poam-processing/poam-manage/poam-manage.component.scss
@@ -163,7 +163,7 @@
         }
 
         .legend-item {
-          width: 100% !important;
+          width: 90% !important;
           display: flex !important;
           align-items: center !important;
           margin-bottom: 0.25rem;
@@ -188,26 +188,28 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            font-size: 0.875rem;
+            font-size: 0.85rem;
             font-weight: 500;
-            margin-left: 0.5rem;
+            margin-left: 0.25rem;
+            margin-right: 0rem;
             flex: 1;
           }
 
           .item-value {
             color: var(--text-color);
             opacity: 0.7;
-            font-size: 0.875rem;
+            font-size: 0.85rem;
             font-weight: 500;
             margin-left: 0.25rem;
+            margin-right: 0.25rem;
             margin-bottom: 0rem;
-            min-width: 1.5rem;
+            min-width: 0.5rem;
           }
 
           .item-percent {
             color: var(--text-color);
             opacity: 0.7;
-            font-size: 0.875rem;
+            font-size: 0.85rem;
             margin-left: 0.5rem;
             margin-bottom: 0.375rem;
             width: 2rem;
